--- a/style.css
+++ b/style.css
@@ -1,34 +1,67 @@
-.head{
-    background-color: #c9ff64;
-    height: 50px;
-    width: 100%;
-    position: fixed;
+.head {
+  background-color: #c9ff64;
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  padding-bottom: 20px;
+}
+
+.up {
+ 
+  position: relative;
+  top: 0;
+  left: 45%;
+  width: 150px;
+  height: 150%;
+  margin-top: -5px;
+  margin-bottom: 20px;
+}
+
+.imgg {
+  width: 6%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  margin-top: -5px;
+  padding-left: 10%;
+  /* z-index: -1; */
+}
+
+.imgg1 {
+  width: 6%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding-right: 10%;
+  /* z-index: -1; */
+}
+
+.mid{
+    width: 150vh;
+    height: 100%;
+    position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
-    padding-bottom: 20px;
-}
-
-.up{
-    text-align: center;
-   
-}
-
-.imgg{
-    width: 6%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    padding-left: 10%;
-    /* z-index: -1; */
-}
-
-.imgg1{
-    width: 6%;
-    height: 100%;
-    position: absolute;
     right: 0;
-    top:0;
-    padding-right: 10%;
-    /* z-index: -1; */
+    bottom: 0;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #f2f2f2;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #000;
+}
+
+.cent{
+    text-align: center;
+    color: rgb(151, 255, 255);
 }
