--- a/style.css
+++ b/style.css
@@ -42,14 +42,14 @@
 
 .mid{
     width: 150vh;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 90px;
+    margin-bottom: 120px;
     margin-left: auto;
     margin-right: auto;
     background-color: #f2f2f2;
@@ -63,5 +63,5 @@
 
 .cent{
     text-align: center;
-    color: rgb(151, 255, 255);
+    color: rgb(255, 94, 0);
 }
