--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   background-color: #c9ff64;
   height: 50px;
   width: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 2;
@@ -25,6 +25,7 @@
   height: 100%;
   position: absolute;
   top: 0;
+  left: -5%;
   margin-top: -5px;
   padding-left: 10%;
   /* z-index: -1; */
@@ -34,7 +35,8 @@
   width: 6%;
   height: 100%;
   position: absolute;
-  right: 0;
+  /* right: 0; */
+  left:15% ;
   top: 0;
   padding-right: 10%;
   /* z-index: -1; */
@@ -64,4 +66,34 @@
 .cent{
     text-align: center;
     color: rgb(255, 94, 0);
+}
+
+.imgg2 {
+  width: 6%;
+  height: 100%;
+  position: absolute;
+  right: 0.5%;
+  top: 0;
+  padding-left: 10%;
+  /* z-index: -1; */
+}
+
+.imgg3 {
+  width: 6%;
+  height: 100%;
+  position: absolute;
+  right: 8%;
+  top: 0;
+  padding-left: 10%;
+  /* z-index: -1; */
+}
+
+.github-banner {
+  /* display: none; */
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 150px;
+  height: 150px;
 }
