--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   background-color: #c9ff64;
   height: 50px;
   width: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
@@ -25,7 +25,6 @@
   height: 100%;
   position: absolute;
   top: 0;
-  left: -5%;
   margin-top: -5px;
   padding-left: 10%;
   /* z-index: -1; */
@@ -35,8 +34,7 @@
   width: 6%;
   height: 100%;
   position: absolute;
-  /* right: 0; */
-  left:15% ;
+  right: 0;
   top: 0;
   padding-right: 10%;
   /* z-index: -1; */
@@ -44,14 +42,14 @@
 
 .mid{
     width: 150vh;
-    height: 70vh;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    margin-top: 90px;
-    margin-bottom: 120px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
     background-color: #f2f2f2;
@@ -65,35 +63,5 @@
 
 .cent{
     text-align: center;
-    color: rgb(255, 94, 0);
-}
-
-.imgg2 {
-  width: 6%;
-  height: 100%;
-  position: absolute;
-  right: 0.5%;
-  top: 0;
-  padding-left: 10%;
-  /* z-index: -1; */
-}
-
-.imgg3 {
-  width: 6%;
-  height: 100%;
-  position: absolute;
-  right: 8%;
-  top: 0;
-  padding-left: 10%;
-  /* z-index: -1; */
-}
-
-.github-banner {
-  /* display: none; */
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 150px;
-  height: 150px;
+    color: rgb(151, 255, 255);
 }
