--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@
 
 .mid{
     width: 150vh;
-    height: 100%;
+    height: 80vh;
     position: absolute;
-    top: 0;
+    top: 5vh;
     left: 0;
     right: 0;
     bottom: 0;
@@ -52,16 +52,16 @@
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #f2f2f2;
+    background-color: #6b6b6b;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px #000;
+    box-shadow: 0px 0px 500px rgb(255, 255, 255);
 }
 
 .cent{
     text-align: center;
-    color: rgb(151, 255, 255);
+    color: rgb(255, 133, 19);
 }
